--- a/index.html
+++ b/index.html
@@ -4,12 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Project</title>
+    <title>TO DO List</title>
+
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- CSS Link -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>To Do List</h1>
+    </header>
+
+    <form>
+        <input type="text" class="todo-input">
+        <button class="todo-button" type="submit">
+            <i class="fas fa-plus-square"></i>
+        </button>
+    </form>
+
+    <div class="todo-container">
+        <ul class="todo-list">
+            <!-- <div class="todo">
+                <li></li>
+                <button>Delete</button>
+                <button>Checked</button>
+            </div> -->
+        </ul>
+    </div>
+
+    <!-- <div class="todo">
+        <li></li>
+        <button></button>
+    </div> -->
     
+    <!-- JS Link -->
+    <script src="app.js"></script>
 </body>
 </html>
